cmake_minimum_required(VERSION 3.5)

include($ENV{IDF_PATH}/tools/cmake/project.cmake)
project(HA_on_off_light)

# Inclui o diret贸rio main como um subdiret贸rio
add_subdirectory(main)

# Inclui o diret贸rio managed_components como um subdiret贸rio
add_subdirectory(managed_components)

set(CMAKE_C_COMPILER "path/to/your/esp32/compiler/gcc")
set(CMAKE_CXX_COMPILER "path/to/your/esp32/compiler/g++")
